Align nav bar icon and avoid extra spacing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -84,6 +84,12 @@ a {
 .site-nav {
   padding: 1rem;
 }
+
+.site-nav a {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .site-nav img {
   display: block;
 }
